--- a/css/troubleshooting.css
+++ b/css/troubleshooting.css
@@ -1,7 +1,7 @@
 /* Troubleshooting CSS */
 
 /* [1:6] SUMMON - Come to ICU 2015 button */
-@import url('https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.1/summon.css');
+@import url('summon.css');
 
  
  
@@ -11,14 +11,14 @@
 
 
 /* [3:6] SELECTOR - Separator heart icon */
-h1 .heart {
+.ui.divider .heart {
   color: red;
 }
 
 
 
 /* [4:6] SPECIFICITY - An Old Cat Can Learn New Tricks */
-h1 { 
+h1.ui.inverted.header { 
   color: lime;
 }
 
@@ -27,7 +27,7 @@ h1 {
 /* [5:6] SUPPORT - Research button */
 .page .grid .column:nth-child(2) .button {  
   /* offset-x | offset-y | blur-radius | spread-radius | color */
-  -moz-box-shadow: 0 1px 20px 5px rgba(255,255,0,0.75);
+  box-shadow: 0 1px 20px 5px rgba(255,255,0,0.75);
 }
 
 
@@ -36,4 +36,7 @@ h1 {
 .ui.list .list>.item [class*="right floated"], 
 .ui.list>.item [class*="right floated"] {
   display: block;
+  float: none;
+  margin-left: 0;
+  line-height: 2rem;
 }
